--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<html>
 <head>
-<title>INDEX</title>
+<title>happy new year 2020</title>
 </head>
 <body>
-<h1>
-hello mysterious  world 
-</h1>
-</body>
+  <p>this is an example paragraph. anything in the <strong>body</strong> tag will appearon the page,just like this<strong>p</strong>tag and its contents.</p>
+  </body>
+  </html>
+
 
 
