--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>happy new year 2020</title>
+<title>fetch happy new year 2020</title>
 </head>
 <body>
   <p>this is an example paragraph. anything in the <strong>body</strong> tag will appearon the page,just like this<strong>p</strong>tag and its contents.</p>
